@@ -10,5 +10,5 @@
 
 #define public MagickPackageName "GraphicsMagick"
 #define public MagickPackageVersion "1.4"
-#define public MagickPackageVersionAddendum ".020150328"
-#define public MagickPackageReleaseDate "snapshot-20150328"
+#define public MagickPackageVersionAddendum ".020150329"
+#define public MagickPackageReleaseDate "snapshot-20150329"
